tests/test_variable_state/bad/unknown_state.catala_en
## Test

```catala
declaration scope A:
  output foo content integer
    state bar
    state baz

scope A:
  definition foo state bar equals 1

  definition foo state basz equals foo + 1
```
